# feng1m8-conda-recipes

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: build.yaml
ar5iv/: ar5iv.py  bld.bat  meta.yaml
ar5ivist/: ar5ivist.bat  ar5ivist.cxx  bld.bat  meta.yaml
aria2/: bld.bat  meta.yaml
ariang/: AriaNg.py  bld.bat  menu-windows.json  meta.yaml
blas-is-mkl/: meta.yaml
c-compiler-is-vs2022/: meta.yaml
ccfits/: bld.bat  build.py  build.sh  meta.yaml
ccfits/conan/: conanfile.py  conanprofile.ini
cfitsio-static/: bld.bat  build.py  meta.yaml
cfitsio-static/conan/: conanfile.py
chealpix/: Fix_link_on_windows.patch  bld.bat  build.sh  meta.yaml
gmake/: bld.bat  fname.cxx  meta.yaml  symlink.c
gsl-static/: build.py  meta.yaml
gsl-static/conan/: conanfile.py
imagemagick/: activate.bat  bld.bat  meta.yaml
ismkl/: meta.yaml
latexindent/: bld.bat  meta.yaml
m2-pacman/: bld.bat  meta.yaml
m2-pacman-mirrors/: bld.bat  meta.yaml
m2w64-libxml2/: build.py  meta.yaml
m2w64-libxslt/: build.py  meta.yaml
mingw-w64-clang-x86_64-ccfits/: PKGBUILD  bld.bat  build.sh  meta.yaml
mingw-w64-clang-x86_64-chealpix/: PKGBUILD  bld.bat  build.sh  meta.yaml
mingw-w64-ucrt-x86_64-ccfits/: PKGBUILD  bld.bat  build.sh  meta.yaml
mingw-w64-ucrt-x86_64-chealpix/: PKGBUILD  bld.bat  build.sh  meta.yaml
noblis/: meta.yaml
noopenblas/: meta.yaml
perl-db_file/: build.py  meta.yaml
perl-image-magick/: bld.bat  meta.yaml
perl-image-size/: meta.yaml
perl-latexml/: meta.yaml
perl-xml-libxml/: bld.bat  build.py  meta.yaml
perl-xml-libxslt/: bld.bat  build.py  meta.yaml
pkg-config-is-pkgconf/: bld.bat  meta.yaml  pkg-config.cxx  pkgconf.cxx
relxill/: bld.bat  meta.yaml  patch.py  xsTypes.h
relxill-python/: bld.bat  meson.build  meta.yaml  pyproject.toml  relxill.pyx
ucrt64-ccfits/: 0001-Add_missing_m4_macros.patch  bld.bat  build.bat  build.sh  meta.yaml  recipe.yaml
ucrt64-imagemagick/: build.py  meta.yaml
ucrt64-liblqr/: meta.yaml
ucrt64-libraqm/: meta.yaml
vs2022/: meta.yaml
xspec-devel/: Fix_BSUF_autoconf_variable.patch  Fix_hd_install.patch  activate.bat  bld.bat  build.sh  meta.yaml
xspec-headers/: Fix_hd_install.patch  deactivate.bat  meta.yaml
