[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python",
    "ninja",
    "cython",
]

[tool.meson-python]
limited-api = true

[project]
name = "relxill"
version = "2.3.1"
requires-python = ">=3.7"
description = "relxill - X-ray Astrophysics local model for Relativistic Reflection"
maintainers = [
  {name = "Minato Feng", email = "feng1m8@outlook.com"}
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Cython",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Private :: Do Not Upload",
]
